frontend/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: frontend.golang-supermarket.com
    http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
